// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusMessage should render with exact matches 1`] = `
<EuiCallOut
  color="success"
  data-test-subj="createIndexPatternStatusMessage"
  iconType="check"
  size="s"
  title={
    <span>
       
      <FormattedMessage
        defaultMessage="Your index pattern matches {strongIndices}."
        id="kbn.management.createIndexPattern.step.status.successLabel.successDetail"
        values={
          Object {
            "strongIndices": <strong>
              <FormattedMessage
                defaultMessage="{indicesLength, plural, one {# index} other {# indices}}"
                id="kbn.management.createIndexPattern.step.status.successLabel.strongIndicesLabel"
                values={
                  Object {
                    "indicesLength": 1,
                  }
                }
              />
            </strong>,
          }
        }
      />
    </span>
  }
/>
`;

exports[`StatusMessage should render with no partial matches 1`] = `
<EuiCallOut
  color="primary"
  data-test-subj="createIndexPatternStatusMessage"
  size="s"
  title={
    <span>
      <FormattedMessage
        defaultMessage="The index pattern you've entered doesn't match any indices. You can match {indicesLength, plural, one {your} other {any of your}} {strongIndices}, below."
        id="kbn.management.createIndexPattern.step.status.notMatchLabel.notMatchDetail"
        values={
          Object {
            "indicesLength": 2,
            "strongIndices": <strong>
              <FormattedMessage
                defaultMessage="{indicesLength, plural, one {# index} other {# indices}}"
                id="kbn.management.createIndexPattern.step.status.notMatchLabel.allIndicesLabel"
                values={
                  Object {
                    "indicesLength": 2,
                  }
                }
              />
            </strong>,
          }
        }
      />
    </span>
  }
/>
`;

exports[`StatusMessage should render with partial matches 1`] = `
<EuiCallOut
  color="primary"
  data-test-subj="createIndexPatternStatusMessage"
  size="s"
  title={
    <span>
      <FormattedMessage
        defaultMessage="Your index pattern doesn't match any indices, but you have {strongIndices} which {matchedIndicesLength, plural, one {looks} other {look}} similar."
        id="kbn.management.createIndexPattern.step.status.partialMatchLabel.partialMatchDetail"
        values={
          Object {
            "matchedIndicesLength": 1,
            "strongIndices": <strong>
              <FormattedMessage
                defaultMessage="{matchedIndicesLength, plural, one {# index} other {# indices}}"
                id="kbn.management.createIndexPattern.step.status.partialMatchLabel.strongIndicesLabel"
                values={
                  Object {
                    "matchedIndicesLength": 1,
                  }
                }
              />
            </strong>,
          }
        }
      />
    </span>
  }
/>
`;

exports[`StatusMessage should render without a query 1`] = `
<EuiCallOut
  color="primary"
  data-test-subj="createIndexPatternStatusMessage"
  size="s"
  title={
    <span>
      <FormattedMessage
        defaultMessage="Your index pattern can match any of your {strongIndices}, below."
        id="kbn.management.createIndexPattern.step.status.matchAnyLabel.matchAnyDetail"
        values={
          Object {
            "strongIndices": <strong>
              2
               indices
            </strong>,
          }
        }
      />
    </span>
  }
/>
`;

exports[`StatusMessage should show that no indices exist 1`] = `
<EuiCallOut
  color="primary"
  data-test-subj="createIndexPatternStatusMessage"
  size="s"
  title={
    <span>
      <FormattedMessage
        defaultMessage="No Elasticsearch indices match your pattern."
        id="kbn.management.createIndexPattern.step.status.noSystemIndicesLabel"
        values={Object {}}
      />
    </span>
  }
/>
`;

exports[`StatusMessage should show that system indices exist 1`] = `
<EuiCallOut
  color="primary"
  data-test-subj="createIndexPatternStatusMessage"
  size="s"
  title={
    <span>
      <FormattedMessage
        defaultMessage="No Elasticsearch indices match your pattern."
        id="kbn.management.createIndexPattern.step.status.noSystemIndicesLabel"
        values={Object {}}
      />
    </span>
  }
/>
`;
